Fix desing overflowing error

--- a/src/App.css
+++ b/src/App.css
@@ -7,12 +7,22 @@
 
 html {
     height: 100%;
+    width: 100%;
 }
 
 body {
     height: 100%;
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
     background: #eaecf0;
+}
+
+#root {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
