--- a/src/style/Panel.css
+++ b/src/style/Panel.css
@@ -1,5 +1,5 @@
 .panel {
-    width: 100vw;
+    width: 100%;
     height: 100%;
     display: flex;
     flex-direction: row;
@@ -7,31 +7,39 @@
 
 .leftPart,
 .rightPart {
-    height: 100vh;
+    height: 100%;
     display: flex;
     flex-direction: column;
 }
 
 .leftPart {
-    width: 15vw;
+    width: 15%;
+    height: 100%;
     align-items: center;
     background: #ffffff;
 }
 
 .rightPart {
-    height: 100vh;
-    width: 85vw;
+    width: 85%;
+    height: 100%;
 }
 
 .leftPart img {
     width: 20vh;
-    height: 20vh;
+    height: 20%;
 }
+
+.notesList {
+    height: 80%;
+    width: 100%;
+    padding: 5px;
+    text-align: center;
+}
+
 header {
-    width: 85vw;
-    height: 10vh;
-    padding: 3vw;
-    box-sizing: border-box;
+    width: 100%;
+    height: 10%;
+    padding-right: 3vw;
     background: #ffffff;
     display: flex;
     flex-direction: row;
@@ -41,7 +49,7 @@ header {
 
 header span {
     cursor: pointer;
-    height: 6vh;
+    /* height: 6vh; */
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -50,19 +58,12 @@ header span {
 header span img {
     width: 6vh;
     height: 6vh;
-    border-radius: 3vh;
-}
-
-.notesList {
-    height: 80vh;
-    width: 15vw;
-    text-align: center;
+    border-radius: 50%;
 }
 
 .note {
-    padding: 10px 20px;
-    width: 85vw;
-    height: 90vh;
+    width: 100%;
+    height: 90%;
     box-shadow: inset 8px 8px 20px -15px rgba(66, 68, 90, 1);
 }
 
@@ -71,8 +72,6 @@ header span img {
 }
 
 .note .mdxeditor-toolbar {
-    /* background-color: limegreen;
-    color: blue; */
     box-shadow: #b6b6b6 0 0 10px;
     top: 10px;
 }
